残高チャージ機能実装に伴いAPI修正

--- a/public/index.html
+++ b/public/index.html
@@ -20,8 +20,9 @@
                 <h4 id="user-name" class="inline-block color-light text-middle"></h4>
                 <h4 class="inline-block color-light text-middle"> 残高:￥</h4>
                 <h4 id="user-remainder" class="inline-block color-light text-middle"></h4>
-                <button id="user-setting-button" class="btn btn-success">設定</button>
+                <button id="user-setting-button" class="btn btn-success">チャージ</button>
             </div>
         </header>
+
     </body>
 </html>
